; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/apei/extr_ghes.c_llist_nodes_reverse.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/apei/extr_ghes.c_llist_nodes_reverse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.llist_node = type { %struct.llist_node* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.llist_node* (%struct.llist_node*)* @llist_nodes_reverse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.llist_node* @llist_nodes_reverse(%struct.llist_node* %0) #0 {
  %2 = alloca %struct.llist_node*, align 8
  %3 = alloca %struct.llist_node*, align 8
  %4 = alloca %struct.llist_node*, align 8
  store %struct.llist_node* %0, %struct.llist_node** %2, align 8
  store %struct.llist_node* null, %struct.llist_node** %4, align 8
  br label %5

5:                                                ; preds = %8, %1
  %6 = load %struct.llist_node*, %struct.llist_node** %2, align 8
  %7 = icmp ne %struct.llist_node* %6, null
  br i1 %7, label %8, label %17

8:                                                ; preds = %5
  %9 = load %struct.llist_node*, %struct.llist_node** %2, align 8
  %10 = getelementptr inbounds %struct.llist_node, %struct.llist_node* %9, i32 0, i32 0
  %11 = load %struct.llist_node*, %struct.llist_node** %10, align 8
  store %struct.llist_node* %11, %struct.llist_node** %3, align 8
  %12 = load %struct.llist_node*, %struct.llist_node** %4, align 8
  %13 = load %struct.llist_node*, %struct.llist_node** %2, align 8
  %14 = getelementptr inbounds %struct.llist_node, %struct.llist_node* %13, i32 0, i32 0
  store %struct.llist_node* %12, %struct.llist_node** %14, align 8
  %15 = load %struct.llist_node*, %struct.llist_node** %2, align 8
  store %struct.llist_node* %15, %struct.llist_node** %4, align 8
  %16 = load %struct.llist_node*, %struct.llist_node** %3, align 8
  store %struct.llist_node* %16, %struct.llist_node** %2, align 8
  br label %5

17:                                               ; preds = %5
  %18 = load %struct.llist_node*, %struct.llist_node** %4, align 8
  ret %struct.llist_node* %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
